Fix duplicated ID check (#97)